# privacy_computing

./: CMakeLists.txt  LICENSE  README.md  qrc_icon.cpp
private_autogen/: moc_predefs.h  mocs_compilation.cpp
private_autogen/UZVCZW6HZX/: qrc_icon.cpp
private_autogen/WFJTZMPJC4/: moc_WorkThread.cpp  moc_loading.cpp  moc_mainwindow.cpp  moc_page1.cpp  moc_page2.cpp  moc_page3.cpp  moc_page4.cpp  moc_page5.cpp  moc_pages.cpp
private_autogen/include/: ui_mainwindow.h  ui_page1.h  ui_page2.h  ui_page3.h  ui_page4.h  ui_page5.h
src/config/: config.h
src/crypto/: block.hpp  prg.hpp  setup.hpp
src/filter/: bloom_filter.hpp  cuckoo_filter.hpp
src/frontend/: main.cpp
src/frontend/cpp/: icon.qrc  icon.qrc.depends  loading.cpp  mainwindow.cpp  mainwindow.ui  page1.ui  page10.cpp  page10.h  page10.ui  page2.ui  page3.ui  page4.ui  page5.ui  page6.ui  page7.ui  page8.cpp  page8.h  page8.ui  page9.cpp  page9.h  page9.ui  pages.cpp
src/frontend/include/: loading.h  mainwindow.h  pages.h
src/include/: global.hpp  std.inc
src/mpc/oprf/: ote_oprf.hpp
src/mpc/pir/: keywordpir.h  keywordpir.hpp  pir.cpp  pir.hpp  pir_.hpp  pir_client.cpp  pir_client.hpp  pir_server.cpp  pir_server.hpp  pirclient.hpp  pirclient_.hpp  priclient.hpp  seal_pir.h  seal_pir.hpp  sealpir_keyword.hpp
src/mpc/psi/: ecdh_psi.hpp  psi_from_oprf.hpp
src/mpc/psu/: mqrpmt_psu.hpp
src/mpc/rpmt/: cwprf_mqrpmt.hpp  ecc_mqrpmt.hpp
src/netio/: stream_channel.hpp
src/qtapi/: ecdh_psi.cpp  ecdh_psi.hpp  message.hpp  psi_cm20.cpp  psi_cm20.hpp  psi_factory.cpp  psi_factory.hpp  psu_factory.cpp  psu_factory.hpp  psu_mqrpmt.cpp  psu_mqrpmt.hpp  sealpir.cpp
src/test/: tes_ecdh_pis.cpp
testfile/: A_PIR_ID.txt  A_PSU_DATA_2_10.txt  B_PSI_DATA_2_10.txt
